--- a/cfg/template_breadcrumb.yaml
+++ b/cfg/template_breadcrumb.yaml
@@ -47,6 +47,12 @@ pages:
         tpls:
           - breadcrumb_07_daily_notes.tpl
 
+  - name: daily_planning
+    renderblocks:
+      - funcname: daily_planning
+        tpls:
+          - breadcrumb_10_daily_planning.tpl
+
   - name: notes_indexed
     renderblocks:
       - funcname: notes_indexed
